get attribute values on API
