# docs/openapi/productinfo.json
@@ -58,7 +58,53 @@
         }
       }
     },
-    "/regions/:provider": {
+    "/products/{provider}/{region}/{attribute}": {
+      "get": {
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http"
+        ],
+        "tags": [
+          "attributes"
+        ],
+        "summary": "Provides a list of available attribute values in a provider's region.",
+        "operationId": "getAttributeValues",
+        "parameters": [
+          {
+            "type": "string",
+            "x-go-name": "Provider",
+            "name": "provider",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "x-go-name": "Region",
+            "name": "region",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "x-go-name": "Attribute",
+            "name": "attribute",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "AttributeResponse",
+            "schema": {
+              "$ref": "#/definitions/AttributeResponse"
+            }
+          }
+        }
+      }
+    },
+    "/regions/{provider}": {
       "get": {
         "description": "Provides the list of available regions of a cloud provider",
         "produces": [
@@ -71,17 +117,67 @@
           "regions"
         ],
         "operationId": "getRegions",
+        "parameters": [
+          {
+            "type": "string",
+            "x-go-name": "Provider",
+            "name": "provider",
+            "in": "path",
+            "required": true
+          }
+        ],
         "responses": {
           "200": {
-            "$ref": "#/responses/regionsResponse"
+            "$ref": "#/responses/RegionsResponse"
           }
         }
       }
     }
   },
   "definitions": {
+    "AttributeResponse": {
+      "description": "AttributeResponse holds attribute values",
+      "type": "object",
+      "properties": {
+        "attributeName": {
+          "type": "string",
+          "x-go-name": "AttributeName"
+        },
+        "attributeValues": {
+          "type": "array",
+          "items": {
+            "type": "number",
+            "format": "double"
+          },
+          "x-go-name": "AttributeValues"
+        }
+      },
+      "x-go-package": "github.com/banzaicloud/telescopes/internal/app/productinfo/api"
+    },
+    "GetAttributeValuesParams": {
+      "description": "GetAttributeValuesParams is a placeholder for the get attribute values route's path parameters",
+      "type": "object",
+      "properties": {
+        "attribute": {
+          "description": "in:path",
+          "type": "string",
+          "x-go-name": "Attribute"
+        },
+        "provider": {
+          "description": "in:path",
+          "type": "string",
+          "x-go-name": "Provider"
+        },
+        "region": {
+          "description": "in:path",
+          "type": "string",
+          "x-go-name": "Region"
+        }
+      },
+      "x-go-package": "github.com/banzaicloud/telescopes/internal/app/productinfo/api"
+    },
     "GetProductDetailsParams": {
-      "description": "GetProductDetailsParams is a placeholder for the get products path parameters",
+      "description": "GetProductDetailsParams is a placeholder for the get products route's path parameters",
       "type": "object",
       "properties": {
         "provider": {
@@ -93,6 +189,18 @@
           "description": "in:path",
           "type": "string",
           "x-go-name": "Region"
+        }
+      },
+      "x-go-package": "github.com/banzaicloud/telescopes/internal/app/productinfo/api"
+    },
+    "GetRegionsParams": {
+      "description": "GetRegionsParams is a placeholder for the get regions route's path parameters",
+      "type": "object",
+      "properties": {
+        "provider": {
+          "description": "in:path",
+          "type": "string",
+          "x-go-name": "Provider"
         }
       },
       "x-go-package": "github.com/banzaicloud/telescopes/internal/app/productinfo/api"
@@ -201,7 +309,7 @@
     }
   },
   "responses": {
-    "regionsResponse": {
+    "RegionsResponse": {
       "description": "RegionResp holds the list of available regions of a cloud provider",
       "headers": {
         "id": {
